--- a/examples/step-55/doc/results.dox
+++ b/examples/step-55/doc/results.dox
@@ -46,12 +46,16 @@
 <table align="center" border="1">
   <tr>
     <th>&nbsp;</th>
+    <th>&nbsp;</th>
+    <th>&nbsp;</th>
     <th colspan="2">UMFPACK</th>
     <th colspan="5">ILU</th>
     <th colspan="5">GMG</th>
   </tr>
   <tr>
     <th>&nbsp;</th>
+    <th>Set-up</th>
+    <th>Assemble</th>
     <th colspan="2">Timings</th>
     <th colspan="2">Timings</th>
     <th colspan="3">Iterations</th>
@@ -59,6 +63,8 @@
     <th colspan="3">Iterations</th>
   </tr>
   <tr>
+    <th>&nbsp;</th>
+    <th>&nbsp;</th>
     <th>&nbsp;</th>
     <th>Setup</th>
     <th>Solve</th>
@@ -75,6 +81,8 @@
   </tr>
   <tr>
     <td align="left">2D, Q1, cycle 9, 37,248 dofs</td>
+    <th>&nbsp;</th>
+    <th>&nbsp;</th>
     <td align="center">5.34s</td>
     <td align="center">0.7%</td>
     <td align="center">1.2%</td>
@@ -90,6 +98,8 @@
   </tr>
   <tr>
     <td align="left">2D, Q3, cycle 9, 74,496 dofs</td>
+    <th>&nbsp;</th>
+    <th>&nbsp;</th>
     <td align="center">22.2s</td>
     <td align="center">0.4%</td>
     <td align="center">4.3%</td>
@@ -105,6 +115,8 @@
   </tr>
   <tr>
     <td align="left">3D, Q1, cycle 7, 172,800 dofs</td>
+    <th>&nbsp;</th>
+    <th>&nbsp;</th>
     <td align="center">9.06s</td>
     <td align="center">3.1%</td>
     <td align="center">8.9%</td>
@@ -120,6 +132,8 @@
   </tr>
   <tr>
     <td align="left">3D, Q3, cycle 7, 691,200 dofs</td>
+    <th>&nbsp;</th>
+    <th>&nbsp;</th>
     <td align="center">516s</td>
     <td align="center">0.6%</td>
     <td align="center">34.5%</td>
