--- a/examples/step-55/doc/intro.dox
+++ b/examples/step-55/doc/intro.dox
@@ -12,6 +12,47 @@ This program deals with the Stokes system of equations which reads as follows in
 
 Note that we are using the deformation tensor instead of $\Delta u$ (a detailed desription of the difference between the two can be found in Step-22, but in summary, the deformation tensor is more physical as well as more expensive.)
 
+<h3> Differences from Step-22 </h3>
+The main difference is that here we use block solvers instead of the Schur Complement approach used in step-22. Details of this approach can be found under the Block Schur complement preconditioner subsection of the Possible Extensions section of Step-22.  There you will find not only a description of what it is doing but also the code you can use.  That being said, we use an approach slightly different from what is used there.  
+
+For the preconditioner of the velocity block, we borrow a class from ASPECT called BlockSchurPreconditioner that does the same thing but in a more efficient way for our purposes.  The major difference is that it does not use a smart pointer or InverseMatrix, as well as having the option to solve for the inverse of A or just apply one preconditioner sweep for it instead.
+
+<h3> Linear Solvers </h3>
+We use a FGMRES for an outside solver, but we have two inner solves.  The first of which is the inner solve for $S$ which is approximated by a mass matrix $M_p$ and is solved by using CG + ILU, whereas for the inside solver for $A$ we will use multiple approaches: CG + ILU, just ILU, CG + GMG, or just GMG. 
+
+We also use UMFPACK.
+
+(Timo: what all to say about the solvers?)
+
+If you want to use UMFPACK as a solver, it is important to note that you have a singular system since the integral of mean pressure being equal to zero not implemented.  So, to deal with this, we set a pressure node equal to zero.
+
+<h3> Linear solver and preconditioning issues </h3>
+The weak form of the discrete equations naturally leads to the following linear system for the nodal values of the velocity and pressure fields: 
+@f{eqnarray*} 
+\left(\begin{array}{cc} A & B^T \\ B & 0 \end{array}\right) \left(\begin{array}{c} U \\ P \end{array}\right) = \left(\begin{array}{c} F \\ 0 \end{array}\right),
+@f}
+
+Our alternative to the way Step-22 solved the problem is to attack the block system at once and use an approximate Schur complement as efficient preconditioner. The idea is as follows: If we find a block preconditioner $P$ such that the matrix 
+@f{eqnarray*}
+\left(\begin{array}{cc} A & B^T \\ B & 0 \end{array}\right)  P^{-1}
+@f}
+
+is simple, then an iterative solver with that preconditioner will converge in a few iterations. Using the Schur complement $S=BA^{-1}BT$, one finds that
+
+@f{eqnarray*}
+ P^{-1} = \left(\begin{array}{cc} \hat{A} & B^T \\ 0 & \hat{S} \end{array}\right)^{-1} 
+@f}
+
+is a good choice, where $M_p=\hat{S} \approx S$, $M_p$ is the mass matrix, and $\hat{A}$ is an approximation of A that has the enum to decide how you want to solve for it. Note that instead of $Mx=b$, we solve 
+
+@f{eqnarray*}
+MP^{-1}y &=& b\\
+x &=& P^{-1} y\\
+@f}
+
+where FMGRES is used because when it solves the first equation, it remembers $P^{-1}$ and uses it again in the second equation.
+
+
 <h3> Reference Solution </h3>
 
 The domain, right hand side and boundary conditions we implement are chosen because they are simple and they will allow us to compute errors using a reference solutions.  We model this situation by solving the following set of equations and boundary conditions on the domain Ω=[0,1]×[0,1]×[0,1]: 
@@ -61,46 +102,6 @@ and thus
  &=& (2 \pi^2 \sin (\pi x),- \pi^3 y \cos(\pi x),- \pi^3 z \cos(\pi x))\\
 & & + (\pi \cos(\pi x) \cos(\pi y) \sin(\pi z) ,- \pi \sin(\pi y) \sin(\pi x) \sin(\pi z),  \pi \cos(\pi z) \sin(\pi x) \cos(\pi y))
 @f}
-
-<h3> Differences from Step-22 </h3>
-The main difference is that here we use block solvers instead of the Schur Complement approach used in step-22. Details of this approach can be found under the Block Schur complement preconditioner subsection of the Possible Extensions section of Step-22.  There you will find not only a description of what it is doing but also the code you can use.  That being said, we use an approach slightly different from what is used there.  
-
-For the preconditioner of the velocity block, we borrow a class from ASPECT called BlockSchurPreconditioner that does the same thing but in a more efficient way for our purposes.  The major difference is that it does not use a smart pointer or InverseMatrix, as well as having the option to solve for the inverse of A or just apply one preconditioner sweep for it instead.
-
-<h3> Linear Solvers </h3>
-We use a GMRES for an outside solver, whereas for the inside solver we will use multiple approaches: CG + ILU, just ILU, CG + GMG, or just GMG.  Also, there are a few iterations of CG for mass matrix (easy).
-
-We also use UMFPACK.
-
-(Timo: what all to say about the solvers?)
-
-If you want to use UMFPACK as a solver, it is important to note that you have a singular system since the integral of mean pressure being equal to zero not implemented.  So, to deal with this, we set a pressure node equal to zero.
-
-<h3> Linear solver and preconditioning issues </h3>
-The weak form of the discrete equations naturally leads to the following linear system for the nodal values of the velocity and pressure fields: 
-@f{eqnarray*} 
-\left(\begin{array}{cc} A & B^T \\ B & 0 \end{array}\right) \left(\begin{array}{c} U \\ P \end{array}\right) = \left(\begin{array}{c} F \\ 0 \end{array}\right),
-@f}
-
-Our alternative to the way Step-22 solved the problem is to attack the block system at once and use an approximate Schur complement as efficient preconditioner. The idea is as follows: If we find a block preconditioner $P$ such that the matrix 
-@f{eqnarray*}
- P^{-1}\left(\begin{array}{cc} A & B^T \\ B & 0 \end{array}\right)
-@f}
-
-is simple, then an iterative solver with that preconditioner will converge in a few iterations. Using the Schur complement $S=BA^{-1}BT$, one finds that
-
-@f{eqnarray*}
- P^{-1} = \left(\begin{array}{cc} \hat{A} & B^T \\ 0 & \hat{S} \end{array}\right)^{-1} 
-@f}
-
-is a good choice, where $M_p=\hat{S} \approx S$, $M_p$ is the mass matrix, and $\hat{A}$ is an approximation of A that has the enum to decide how you want to solve for it. Note that instead of $Mx=b$, we solve 
-
-@f{eqnarray*}
-MP^{-1}y &=& b\\
-x &=& P^{-1} y\\
-@f}
-
-where FMGRES is used because when it solves the first equation, it remembers $P^{-1}$ and uses it again in the second equation.
 
 <h3> Computing Errors </h3>
 We need to make sure our mean pressure is zero.  To do this we use the <code>compute_mean_value</code> function in deal.ii to compute the mean value of pressure component of the solution. 
