--- a/examples/step-55/doc/results.dox
+++ b/examples/step-55/doc/results.dox
@@ -13,31 +13,32 @@
     <th>Rate</th>
   </tr>
   <tr>
-    <th>3</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
+    <td>3D, 3 global refinements</td>
+    <td>0.000670888</td>
+    <td align="center">-</td>
+    <td>0.0036533</td>
+    <td align="center">-</td>
+    <td>0.0414704</td>
+    <td align="center">-</td>
   </tr>
   <tr>
-    <th>4</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
+    <td>3D, 4 global refinements</td>
+    <td>8.38E-005</td>
+    <td>8.0073235678</td>
+    <td>0.00088494</td>
+    <td>4.1283024838</td>
+    <td>0.0103781</td>
+    <td>3.9959530164</td>
   </tr>
   <tr>
-    <th>5</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
+    <td>3D, 5 global refinements</td>
+    <td>1.05E-005</td>
+    <td>8.0008689923</td>
+    <td>0.000220253</td>
+    <td>4.0178340363</td>
+    <td>0.00259519</td>
+    <td>3.9989750269</td>
+</th>
   </tr>
 </table>
 
@@ -48,31 +49,37 @@
     <th>&nbsp;</th>
     <th>&nbsp;</th>
     <th>&nbsp;</th>
-    <th colspan="2">UMFPACK</th>
-    <th colspan="5">ILU</th>
-    <th colspan="5">GMG</th>
+    <th colspan="3">UMFPACK</th>
+    <th colspan="6">ILU</th>
+    <th colspan="6">GMG</th>
+  </tr>
+  <tr>
+    <th>&nbsp;</th>
+    <th>&nbsp;</th>
+    <th>&nbsp;</th>
+    <th>&nbsp;</th>
+    <th colspan="2">Timings</th>
+    <th>&nbsp;</th>
+    <th colspan="2">Timings</th>
+    <th colspan="3">Iterations</th>
+    <th>&nbsp;</th>
+    <th colspan="2">Timings</th>
+    <th colspan="3">Iterations</th>
   </tr>
   <tr>
     <th>&nbsp;</th>
     <th>Set-up</th>
     <th>Assemble</th>
-    <th colspan="2">Timings</th>
-    <th colspan="2">Timings</th>
-    <th colspan="3">Iterations</th>
-    <th colspan="2">Timings</th>
-    <th colspan="3">Iterations</th>
-  </tr>
-  <tr>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
+    <th>VM Peak</th>
     <th>Setup</th>
     <th>Solve</th>
+    <th>VM Peak</th>
     <th>Setup</th>
     <th>Solve</th>
     <th>Outer</th>
     <th>Inner (A)</th>
     <th>Inner (S)</th>
+    <th>VM Peak</th>
     <th>Setup</th>
     <th>Solve</th>
     <th>Outer</th>
@@ -80,72 +87,64 @@
     <th>Inner (S)</th>
   </tr>
   <tr>
-    <td align="left">2D, Q1, cycle 9, 37,248 dofs</td>
+    <td align="left">3D, 3 global refinements</td>
     <th>&nbsp;</th>
     <th>&nbsp;</th>
-    <td align="center">5.34s</td>
-    <td align="center">0.7%</td>
-    <td align="center">1.2%</td>
-    <td align="center">89.5%</td>
-    <td align="center">0.9%</td>
-    <td align="center">2.3%</td>
-    <td align="center">5.4%</td>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
+    <td align="center">5305908</td>
+    <td align="center">2.16s</td>
+    <td align="center">2.2s</td>
+    <td align="center">5013308</td>
+    <td align="center">0.37s</td>
+    <td align="center">0.305s</td>
+    <td align="center">27</td>
+    <td align="center">107</td>
+    <td align="center">28</td>
+    <td align="center">5036092</td>
+    <td align="center">0.37s</td>
+    <td align="center">1.04s</td>
+    <td align="center">23</td>
+    <td align="center">47</td>
+    <td align="center">24</td>
   </tr>
   <tr>
-    <td align="left">2D, Q3, cycle 9, 74,496 dofs</td>
+    <td align="left">3D, 4 global refinements</td>
     <th>&nbsp;</th>
     <th>&nbsp;</th>
-    <td align="center">22.2s</td>
-    <td align="center">0.4%</td>
-    <td align="center">4.3%</td>
-    <td align="center">84.1%</td>
-    <td align="center">4.1%</td>
-    <td align="center">3.5%</td>
-    <td align="center">3.6%</td>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
+    <td align="center">11674656</td>
+    <td align="center">231s</td>
+    <td align="center">225s</td>
+    <td align="center">5365676</td>
+    <td align="center">3.15s</td>
+    <td align="center">8.21s</td>
+    <td align="center">29</td>
+    <td align="center">186</td>
+    <td align="center">30</td>
+    <td align="center">5689952</td>
+    <td align="center">2.72s</td>
+    <td align="center">9.14s</td>
+    <td align="center">23</td>
+    <td align="center">48</td>
+    <td align="center">24</td>
   </tr>
   <tr>
-    <td align="left">3D, Q1, cycle 7, 172,800 dofs</td>
+    <td align="left">3D, 5 global refinements</td>
     <th>&nbsp;</th>
     <th>&nbsp;</th>
-    <td align="center">9.06s</td>
-    <td align="center">3.1%</td>
-    <td align="center">8.9%</td>
-    <td align="center">42.7%</td>
-    <td align="center">7.0%</td>
-    <td align="center">20.6%</td>
-    <td align="center">17.7%</td>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-  </tr>
-  <tr>
-    <td align="left">3D, Q3, cycle 7, 691,200 dofs</td>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <td align="center">516s</td>
-    <td align="center">0.6%</td>
-    <td align="center">34.5%</td>
-    <td align="center">13.4%</td>
-    <td align="center">32.8%</td>
-    <td align="center">17.1%</td>
-    <td align="center">1.5%</td>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
-    <th>&nbsp;</th>
+    <td align="center">-</td>
+    <td align="center">-</td>
+    <td align="center">-</td>
+    <td align="center">8636760</td>
+    <td align="center">29.4s</td>
+    <td align="center">152s</td>
+    <td align="center">32</td>
+    <td align="center">361</td>
+    <td align="center">34</td>
+    <td align="center">11025296</td>
+    <td align="center">21s</td>
+    <td align="center">78.1s</td>
+    <td align="center">22</td>
+    <td align="center">46</td>
+    <td align="center">23</td>
   </tr>
 </table>
 
